examples/test_package/Double_dc_only_report_tool_new/steps/benchrps___precise_run4/#test_analysis_2_result.txt
# Rock-Paper-Scissors Game Evaluation Report

## Background and Purpose
This report evaluates a Prolog implementation of a rock-paper-scissors game that determines the winner between two players based on their move sequences. The system should correctly calculate round results, compute scores, and determine the overall winner.

## Test Results Summary
The evaluation encountered an error during testing:
```
Error evaluating Problog model:
    return exec_func(node_id=node_id, node=node, **kwdargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/engine_stack.py", line 839, in eval_call
    raise UnknownClause(origin, location=loc)
problog.engine.UnknownClause: No clauses found for ''->'/2' at 41:77.
```

The test query was:
```prolog
query(determine_winner([rock,rock,rock],[paper,paper,scissor],W)).
```

## Failure Localization
The error occurs in the `determine_winner` predicate implementation (line 41). The issue stems from:
1. An incomplete predicate definition (cut off mid-implementation)
2. A syntax error in the conditional operator `->` implementation

## Root Cause Analysis
1. **Logical Structure**: The basic game rules (move/1, beats/2) and result calculation (result/3) are correctly defined.
2. **Recursive Termination**: The play/3 and compute_score/2 predicates have proper base cases.
3. **Main Predicate Issue**: The `determine_winner` predicate is incomplete and contains syntax errors in its conditional logic implementation.

## Overall Analysis
1. **Functional Requirements**:
   - Classical reasoning: Partially met (basic rules work but main predicate fails)
   - Probabilistic reasoning: Not used in this implementation
   - Neural network integration: DeepProbLog feature not used

2. **Edge Cases**:
   - Non-list inputs not handled
   - Uneven move lists not handled
   - Invalid moves not validated

## Error Summary

| # | Problem | Impact | Suggestion |
|---|---------|--------|------------|
| 1 | Incomplete predicate definition | Fails to execute | Complete the `determine_winner` implementation |
| 2 | Syntax error in conditional | Causes parsing failure | Fix the `->` operator usage |
| 3 | Missing input validation | Potential runtime errors | Add move validation checks |

## Corrected Implementation
```prolog
determine_winner(P1Moves, P2Moves, Winner) :- 
    play(P1Moves, P2Moves, Results), 
    compute_score(Results, Score), 
    (Score > 0 -> Winner = player1; 
     Score < 0 -> Winner = player2; 
     Winner = draw).
```

The implementation requires completion of the main predicate with proper syntax for conditional logic. Once fixed, it should correctly:
1. Compare move sequences
2. Calculate round results
3. Compute total score
4. Determine the overall winner

Word count: 398